# fastrace

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  README.md  licenserc-original.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml  typo.yml  typos.yml
docs/: architecture-and-span-lifecycle.md
etc/benchmark-result/: README.md  compare-m4.2xlarge.txt  compare-m5.2xlarge.txt  compare-m5a.2xlarge.txt  compare-m6g.2xlarge.txt
examples/: Cargo.toml  asynchronous.rs  basic.rs  harness.rs  logging.rs  partial_submission.rs  sampling.rs  synchronous.rs
fastrace/: Cargo.toml
fastrace-datadog/: Cargo.toml  README.md
fastrace-datadog/src/: lib.rs
fastrace-futures/: Cargo.toml  README.md
fastrace-futures/src/: lib.rs
fastrace-google-cloud/: Cargo.toml  README.md
fastrace-google-cloud/src/: lib.rs
fastrace-jaeger/: Cargo.toml  README.md
fastrace-jaeger/src/: lib.rs  thrift.rs
fastrace-macro/: Cargo.toml  README.md
fastrace-macro/src/: lib.rs
fastrace-macro/tests/: ui.rs
fastrace-macro/tests/ui/err/: has-duplicated-arguments.rs  has-duplicated-arguments.stderr  has-empty-name.rs  has-expr-argument.rs  has-expr-argument.stderr  has-ident-arguments.stderr  has-properties-and-enter-on-poll.rs  name-is-not-an-assignment-expression.rs  name-is-not-an-assignment-expression.stderr  properties-non-string.rs  properties-non-string.stderr  properties-partial-escape.rs  properties-partial-escape.stderr  trace-interleaved.rs  trace-interleaved.stderr
fastrace-macro/tests/ui/ok/: async-in-trait.rs  async-trait.rs  has-enter-on-poll.rs  has-name-async-mut.rs  has-name-async.rs  has-name-mut.rs  has-name.rs  has-no-arguments.rs  has-short-name.rs
fastrace-opentelemetry/: CHANGELOG.md  Cargo.toml  README.md
fastrace-opentelemetry/src/: lib.rs
fastrace-opentelemetry/tests/: context.rs
fastrace/benches/: compare.rs  id.rs  object_pool.rs  spsc.rs  trace.rs  vec.rs
fastrace/examples/: asynchronous.rs  get_started.rs  log.rs  logging.rs  synchronous.rs  tail_sampling.rs  unit_test.rs
fastrace/src/: event.rs  future.rs  lib.rs  macros.rs  span.rs
fastrace/src/collector/: command.rs  console_reporter.rs  global_collector.rs  id.rs  mod.rs  test_reporter.rs
fastrace/src/local/: local_collector.rs  local_span.rs  local_span_line.rs  local_span_stack.rs  mod.rs  raw_span.rs  span_queue.rs
fastrace/src/util/: command_bus.rs  legacy_spsc.rs  mod.rs  object_pool.rs  spsc.rs  tree.rs
fastrace/tests/: lib.rs
fastrace/tests/snapshots/: lib__early_local_collect.snap  lib__event.snap  lib__macro.snap  lib__macro_example.snap  lib__macro_properties.snap  lib__multiple_local_parent.snap  lib__multiple_threads_multiple_spans_expected_graph1.snap  lib__multiple_threads_multiple_spans_expected_graph2.snap  lib__multiple_threads_single_span.snap  lib__not_sampled.snap  lib__property.snap  lib__single_thread_multiple_spans_expected_graph1.snap  lib__single_thread_multiple_spans_expected_graph2.snap  lib__single_thread_multiple_spans_expected_graph3.snap  lib__single_thread_single_span.snap
test-statically-disable/: Cargo.toml
test-statically-disable/src/: main.rs
tests/: local_span_integration_test.rs
tests/macros/: Cargo.toml
tests/macros/tests/: ui.rs
tests/macros/tests/ui/err/: has-empty-name.stderr  has-enter-on-poll-and-sync.rs  has-enter-on-poll-and-sync.stderr  has-expr-argument.rs  has-expr-argument.stderr  has-ident-arguments.rs  has-name-and-short-name.rs  has-name-and-short-name.stderr  has-properties-and-enter-on-poll.rs  has-properties-and-enter-on-poll.stderr  item-is-not-a-function.rs  item-is-not-a-function.stderr  name-is-not-an-assignment-expression.rs  properties-non-string.rs  properties-partial-escape.rs  properties-partial-escape.stderr  trace-interleaved.rs  trace-interleaved.stderr
tests/macros/tests/ui/ok/: async-in-trait.rs  async-trait-dyn-future.rs  async-trait.rs  dyn-future.rs  has-crate-path.rs  has-name-and-short-name.rs  has-name-async-mut.rs  has-no-arguments.rs  has-properties.rs  has-short-name.rs  impl-stream.rs
tests/statically-disable/: Cargo.toml
tests/statically-disable/src/: main.rs
