[workspace]
members = [
  "fastrace",
  "fastrace-macro",
  "fastrace-jaeger",
  "fastrace-datadog",
  "fastrace-opentelemetry",
  "fastrace-futures",
  "test-statically-disable",
]
resolver = "2"

[workspace.package]
authors = ["Fastrace Authors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fastracelabs/fastrace"

[workspace.dependencies]
# workspace dependencies
fastrace = { version = "0.7.0", path = "fastrace" }
fastrace-macro = { version = "0.7.0", path = "fastrace-macro" }

# workspace leaves
fastrace-datadog = { path = "fastrace-datadog" }
fastrace-futures = { path = "fastrace-futures" }
fastrace-jaeger = { path = "fastrace-jaeger" }
fastrace-opentelemetry = { path = "fastrace-opentelemetry" }

# crates.io dependencies
futures = { version = "0.3" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }

[profile.bench]
lto = true
opt-level = 3
