[workspace]
members = [
  "fastrace",
  "fastrace-macro",
  "fastrace-jaeger",
  "fastrace-datadog",
  "fastrace-opentelemetry",
  "fastrace-futures",
  "test-statically-disable",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fast/fastrace"
rust-version = "1.75"

[workspace.dependencies]
# workspace dependencies
fastrace = { version = "0.7.7", path = "fastrace" }
fastrace-macro = { version = "0.7.7", path = "fastrace-macro" }

# workspace leaves
fastrace-datadog = { path = "fastrace-datadog" }
fastrace-futures = { path = "fastrace-futures" }
fastrace-jaeger = { path = "fastrace-jaeger" }
fastrace-opentelemetry = { path = "fastrace-opentelemetry" }

# crates.io dependencies
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }

[profile.bench]
lto = true
opt-level = 3
