[workspace]
members = [
  "fastrace",
  "fastrace-macro",
  "fastrace-jaeger",
  "fastrace-datadog",
  "fastrace-opentelemetry",
  "fastrace-futures",

  # non-publish crates
  "examples",
  "tests/macros",
  "tests/statically-disable",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fast/fastrace"
rust-version = "1.80.0"

[workspace.dependencies]
# workspace dependencies
fastrace = { version = "0.7.10", path = "fastrace" }
fastrace-macro = { version = "0.7.10", path = "fastrace-macro" }

# workspace leaves
fastrace-datadog = { path = "fastrace-datadog" }
fastrace-futures = { path = "fastrace-futures" }
fastrace-jaeger = { path = "fastrace-jaeger" }
fastrace-opentelemetry = { path = "fastrace-opentelemetry" }

# crates.io dependencies
log = { version = "0.4.27" }
opentelemetry = { version = "0.30.0", default-features = false, features = [
  "trace",
] }
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = [
  "trace",
  "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.30.0", default-features = false, features = [
  "trace",
] }
serde = { version = "1.0", features = ["derive"] }

# test dependencies
tokio = { version = "1.45.0", features = ["full"] }

[profile.bench]
lto = true
opt-level = 3
