[package]
categories = ["development-tools::debugging"]
description = "Datadog reporter for fastrace"
documentation = "https://docs.rs/fastrace-datadog"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
name = "fastrace-datadog"
readme = "README.md"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
fastrace = { workspace = true }
log = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
futures = "0.3"
