[package]
name = "fastrace-datadog"
version = "0.7.6"

categories = ["development-tools::debugging"]
description = "Datadog reporter for fastrace"
documentation = "https://docs.rs/fastrace-datadog"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fastrace = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
rmp-serde = "1.3"
serde = { workspace = true }

[dev-dependencies]
