[package]
name = "fastrace-futures"
version = "0.7.0"

categories = ["development-tools::debugging"]
description = "Utilities for tracing `futures` with fastrace"
documentation = "https://docs.rs/fastrace-futures"
keywords = ["tracing", "span", "futures", "jaeger", "opentelemetry"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastrace = { workspace = true }
futures = { workspace = true }
pin-project-lite = "0.2"

[dev-dependencies]
async-stream = "0.3"
tokio = { version = "1.38", features = ["rt", "time", "macros"] }
