[package]
name = "fastrace-futures"
version = "0.7.5"

categories = ["development-tools::debugging"]
description = "Utilities for tracing `futures` with fastrace"
documentation = "https://docs.rs/fastrace-futures"
keywords = ["tracing", "span", "futures", "jaeger", "opentelemetry"]
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fastrace = { workspace = true }
futures = { workspace = true }
pin-project = { version = "1.1.8" }

[dev-dependencies]
async-stream = "0.3"
tokio = { version = "1.38", features = ["rt", "time", "macros"] }
