[package]
name = "fastrace-google-cloud"
version = "0.7.0"

categories = ["development-tools::debugging"]
description = "Google Cloud Monitoring reporter for fastrace"
documentation = "https://docs.rs/fastrace-google-cloud"
keywords = ["tracing", "span", "google-cloud", "stackdriver"]
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fastrace = { workspace = true }
google-cloud-rpc = "0.2.0"
google-cloud-trace-v2 = "0.2.0"
google-cloud-wkt = "0.3.0"
log = { workspace = true }
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
tokio = { version = "1.44.2", default-features = false, features = ["rt"] }
