[package]
name = "fastrace-jaeger"
version = "0.7.12"

categories = ["development-tools::debugging"]
description = "Jaeger reporter for fastrace"
documentation = "https://docs.rs/fastrace-jaeger"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fastrace = { workspace = true }
log = { workspace = true }
thrift_codec = "0.3"

[dev-dependencies]
