[package]
name = "fastrace-macro"
version = "0.7.0"

categories = ["development-tools::debugging"]
description = "Attribute procedural macro for fastrace"
documentation = "https://docs.rs/fastrace-macro"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
# The macro `quote_spanned!` is added to syn in 1.0.84
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.84", features = [
  "full",
  "parsing",
  "extra-traits",
  "proc-macro",
  "visit-mut",
] }

[dev-dependencies]
fastrace = { workspace = true }
log = { workspace = true }
logcall = "0.1"
tokio = { version = "1.38", features = ["full"] }
trybuild = "1.0"
# The procedural macro `trace` only supports async-trait higher than or equal to 0.1.52
async-trait = "0.1.52"

