[package]
name = "fastrace-opentelemetry"
version = "0.7.4"

categories = ["development-tools::debugging"]
description = "Opentelemetry reporter for fastrace"
documentation = "https://docs.rs/fastrace-opentelemetry"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]

[dependencies]
fastrace = { workspace = true }
futures = { workspace = true, features = ["executor"] }
log = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }

[dev-dependencies]
opentelemetry-otlp = { workspace = true }
rand = "0.8"
tokio = { version = "1.41", features = ["rt-multi-thread"] }
