[package]
name = "fastrace-opentelemetry"
version = "0.14.0"

categories = ["development-tools::debugging"]
description = "Opentelemetry reporter for fastrace"
documentation = "https://docs.rs/fastrace-opentelemetry"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fastrace = { workspace = true }
log = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pollster = { version = "0.4.0" }

[dev-dependencies]
opentelemetry-otlp = { workspace = true }
