[package]
name = "fastrace"
version = "0.7.8"

categories = ["development-tools::debugging"]
description = "A high-performance timeline tracing library for Rust"
documentation = "https://docs.rs/fastrace"
keywords = ["tracing", "span", "datadog", "jaeger", "opentelemetry"]
readme = "../README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
enable = []

[dependencies]
fastant = "0.1"
fastrace-macro = { workspace = true }
parking_lot = "0.12"
pin-project = { version = "1.1.8" }
rand = "0.9"
rtrb = "0.3"
serde = { workspace = true }

[dev-dependencies]
async-trait = "0.1"
crossbeam = "0.8"
divan = "0.1"
fastrace = { workspace = true, features = ["enable"] }
fastrace-datadog = { workspace = true }
fastrace-jaeger = { workspace = true }
fastrace-opentelemetry = { workspace = true }
flume = "0.11"
futures-timer = "3"
log = { workspace = true }
logcall = "0.1"
logforth = { version = "0.23.1", features = ["fastrace"] }
mockall = "0.13"
opentelemetry = { version = "0.29.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.29.0", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["trace"] }
pollster = { version = "0.4.0" }
rand = "0.9"
rustracing = "0.6"
serial_test = "3.1"
test-harness = "0.3"
tokio = { version = "1.38", features = [
  "rt",
  "time",
  "macros",
  "rt-multi-thread",
] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.30.0" }
tracing-subscriber = { version = "0.3.19" }

[[bench]]
harness = false
name = "trace"

[[bench]]
harness = false
name = "compare"

[[bench]]
harness = false
name = "spsc"

[[bench]]
harness = false
name = "id"

[[bench]]
harness = false
name = "vec"
