[package]
name = "test-statically-disable"
publish = false
version = "0.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dependencies]
fastrace = { workspace = true } # do not turn on the "enable" feature
